<resources>
    <string name="DATABASE_VERSION" translatable="false">DATABASE_VERSION</string>
    <string name="app_name" translatable="false">PPK UNY Mobile</string>
    <string name="findJobs" translatable="false">Find Job</string>
    <string name="search_company">Search Company&#8230;</string>
    <string name="search_job">Search Job&#8230;</string>
    <string name="jobexpired">Job is expired</string>
    <string name="quick_apply">Quick Apply</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="lowongan_buka">Open</string>
    <string name="lowongan_tutup">Closed</string>
    <string name="inactive">Inactive</string>
    <string name="myJobs" translatable="false">My Job</string>
    <string name="pesan1">Your saved jobs will be in here</string>
    <string name="pesan2">Sign up</string>
    <string name="pesan5">to access this feature</string>
    <string name="applied">Applied</string>
    <string name="disimpan">Saved</string>
    <string name="pesan_applied_jobs">The jobs you applied will be saved here</string>
    <string name="information">Information</string>
    <string name="search_informasi">Search Information&#8230;</string>
    <string name="none" translatable="false"> - </string>
    <string name="berita">News</string>
    <string name="job_seeker" translatable="false">Job Seeker</string>
    <string name="tips_karir">Career Tips</string>
    <string name="panggilan_test">Career Test</string>
    <string name="my_profile" translatable="false">My Profile</string>
    <string name="profile">Profile</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="upload_resume">Upload Resume</string>
    <string name="settings">Settings</string>
    <string name="applied_jobs">Applied Jobs</string>
    <string name="sign_out">Sign Out</string>
    <string name="logged_out">Logged Out</string>
    <string name="your_profile">Your Profile</string>
    <string name="full_name">Full name</string>
    <string name="et_full_name">Enter your full name</string>
    <string name="phone_number">Phone number</string>
    <string name="et_phone_number">Enter your phone number</string>
    <string name="cv_resume" translatable="false">CV/Resume</string>
    <string name="no_file_selected">No file is selected</string>
    <string name="upload">Upload</string>
    <string name="jenis_file"><b>File extension: </b>.pdf </string>
    <string name="ukuran_max"><b>Max File size: </b> 5 MB</string>
    <string name="upload_from">Upload From : </string>
    <string name="fileTooLarge">The file  size is too large</string>
    <string name="mustPdfFile">The file must be a .pdf</string>
    <string name="dropbox" translatable="false">Dropbox</string>
    <string name="google_drive" translatable="false">Google Drive </string>
    <string name="one_drive" translatable="false">One Drive</string>
    <string name="local_file" translatable="false">Local File</string>
    <string name="birth_place">Place of Birth</string>
    <string name="birth_date">Date of Birth</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="supporting_files">Supporting Files</string>
    <string name="pick_date">Pick Date</string>
    <string name="ddmmyyyy" translatable="false">dd/mm/yyyy</string>
    <string name="fileName">File name</string>
    <string name="profileUpdated">Profile updated</string>
    <string name="errorOccured">Error has occurred</string>
    <string name="su_pesan0">Save searches, view your shortlisted jobs and stay in sync across devices</string>
    <string name="already_a_user"><u>Already a user?</u></string>
    <string name="successRegister">Successfully Registered, link verification has been sent to your email</string>
    <string name="passwordTooWeak">Password is too weak</string>
    <string name="emailUsed">Email is already used</string>
    <string name="Skip"><u>Skip</u></string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="login_with">Login with</string>
    <string name="or">or</string>
    <string name="create_account"><u>Create account</u></string>
    <string name="reset" translatable="false">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="allField">All field must be filled</string>
    <string name="loginFailed">Login Failed</string>
    <string name="verifyEmailAddress">Please verify your email address first</string>
    <string name="invalidEmail">Invalid email</string>
    <string name="wrongPassword">Wrong password</string>
    <string name="authentificationFailed">Authentification failed</string>
    <string name="notification">Notifications</string>
    <string name="notificationJob">Receive Job Notifications</string>
    <string name="notificationAbout">Receive notifications About : </string>
    <string name="all">All</string>
    <string name="language">Language</string>
    <string name="indonesia" translatable="false">Bahasa Indonesia</string>
    <string name="english">English</string>
    <string name="cache" translatable="false">Cache</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="cache_size">Cache Size : </string>
    <string name="submit_your_resume">Submit Your Resume to</string>
    <string name="uploaded_on">Uploaded on : </string>
    <string name="submit">Submit</string>
    <string name="not_now">Not now</string>
    <string name="file_name">File Name</string>
    <string name="file_date" translatable="false">File date</string>
    <string name="company_name">Company Name</string>
    <string name="delete_the_file">Delete this file?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="upload_your_resume">You need to complete your profile first</string>
    <string name="complete">Complete Profile</string>
    <string name="sign_up_or_login">Sign up or login to use this feature</string>
    <string name="input_email">Input your email address</string>
    <string name="link_is_sent">"Link is sent to your email"</string>
    <string name="alert_IKA_content">You must registered as a UNY alumnus to access this content.</string>
    <string name="web_id_cliet" translatable="false">457901691142-1p3at4v6m99dn9aop9pd791kmhd67uu8.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">2919021738236740</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2919021738236740</string>
    <string name="app_key" translatable="false">kyaule74059mtvi</string>
    <string name="key_language" translatable="false">key_language</string>
    <string name="captcha_site_key" translatable="false">6LcpPrUZAAAAABcFEimpQigy320RbgVPL_tiAG9Z</string>
    <string name="URL_KEY" translatable="false">URL_KEY</string>
    <string name="fileNameOri" translatable="false">File Name</string>
    <string name="fullName" translatable="false">Full Name</string>
    <string name="phoneNumber" translatable="false">Phone Number</string>
    <string name="filePath" translatable="false">File Path</string>
    <string name="NIM" translatable="false">NIM</string>
    <string name="change_account"><u>Change Account</u></string>
    <string name="company_logo" translatable="false">Company Logo</string>
    <string name="google_logo" translatable="false">Google Logo</string>
    <string name="facebook_logo" translatable="false">Facebook Logo</string>
    <string name="my_job_guess_iv_desc" translatable="false">Logo My Job Image Description</string>
    <string name="sign_up_iv_desc" translatable="false">Sign Up Image Description</string>
    <string name="iv_upload_resume" translatable="false">iv_upload_resume</string>
    <string name="iv_delete" translatable="false">iv_iv_delete</string>
    <string name="iv_document" translatable="false">iv_document</string>
    <string name="jobName" translatable="false">Job Name</string>
    <string name="companyName" translatable="false">Company Name</string>
    <string name="detail" translatable="false">Detail</string>
    <string name="jobDate" translatable="false">Job Date</string>
    <string name="title_information" translatable="false">Title Information</string>
    <string name="category" translatable="false">Category</string>
    <string name="by" translatable="false">by</string>
    <string name="loading">Loading</string>
    <string name="no_internet">No internet connection</string>
    <string name="already_applied">Already applied</string>
    <string name="logged_in">Logged In</string>
    <string name="fileIsUploaded">File is uploaded</string>
    <string name="failedUploading">"Failed uploading"</string>
    <string name="grantPermissions">You have to granted permissions</string>
    <string name="kontak_kami">Contact Us</string>
    <string name="pusat_pengembangan_karir" translatable="false">Pusat Pengembangan Karir UNY</string>
    <string name="gedung_lppmp" translatable="false">Gedung LPPMP UNY Lantai 3, Kampus UNY Karangmalang, Yogyakarta 55281</string>
    <string name="T1" translatable="false">T1: (0274) 586168 psw. 1146</string>
    <string name="T2" translatable="false">T2: (0274) 4469449</string>
    <string name="fax" translatable="false">Faxs: (0274) 550838</string>
    <string name="smswa" translatable="false">SMS/WA : 0857 0101 0404</string>
    <string name="email_ppk" translatable="false">ppk@uny.ac.id</string>
    <string name="facebook_ppkuny" translatable="false">Pusat Karir UNY</string>
    <string name="twitter_ppkuny" translatable="false">PusatKarirUNY</string>
    <string name="instagram_ppkuny" translatable="false">PPK UNY</string>
    <string name="ppk_version" translatable="false">PPK UNY Mobile v 0.9.0</string>
    <string name="ppkacid" translatable="false">ppk.lppmp.uny.ac.id</string>
    <string name="about">About</string>
    <string name="all_field_must_be_filled">Please complete the form</string>
    <string-array name="topics">
        <item>Berita</item>
        <item>JobSeeker</item>
        <item>TipsKarir</item>
        <item>PanggilanTes</item>
        <item>job</item>
    </string-array>
    <string name="registrasi_IKA">IKA UNY Registration</string>
    <string name="nama_lengkap">Full Name</string>
    <string name="ijazah">Diploma</string>
    <string name="NIM_sesuai_ijazah">Student ID</string>
    <string name="username_login">Username for Login</string>
    <string name="key_diploma_name" translatable="false">Nama dokumen</string>
    <string name="konfirmasi_password">Confirm Password</string>
    <string name="form_pendaftaran_IKA">IKA UNY Registration Form</string>
    <string name="tracer_study">Tracer Study</string>
    <string name="upload_ijazah">Upload your diploma (.jpg or .png)</string>
    <string name="bt_upload_ijazah">Upload Diploma</string>
    <string name="ukuran_max_1mb"><b>Max File size: </b> 1 MB</string>
    <string name="inProcess">In Process</string>
    <string name="verified">Verified</string>
    <string name="choose">Choose</string>
    <string name="upload_diploma">Upload Diploma</string>
    <string name="preview"><u>Preview</u></string>
    <string name="wait_for_verification">Please wait for verification</string>
    <string name="snack_tracer_study">There\'s no tracer study yet</string>
    <string name="title_activity_about" translatable="false">about</string>
    <string name="panggilan_tes">Interview Invitation</string>
    <string name="please_install">Google Map app is needed</string>
</resources>