<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <Button
        android:id="@+id/bt_x"
        style="@style/ButtonX"

        app:layout_constraintBottom_toTopOf="@+id/upload_resume_iv"
        app:layout_constraintEnd_toEndOf="parent"/>


    <ImageView
        android:id="@+id/upload_resume_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/quick_apply_logo"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_x" />

    <TextView
        android:id="@+id/submit_tv"
        style="@style/bigFontBaseColor"
        android:text="@string/submit_your_resume"
        android:layout_marginTop="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upload_resume_iv" />

    <TextView
        android:id="@+id/company_name_tv"
        style="@style/normalFontBaseColor"
        android:text="@string/company_name"
        android:layout_marginTop="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submit_tv" />

    <TextView
        android:id="@+id/file_name"
        style="@style/bigFontWhite"
        android:text="@string/file_name"
        android:padding="10dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/gray"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/company_name_tv" />


    <TextView
        android:id="@+id/tv_uploaded"
        style="@style/normalFontBaseColor"
        android:text="@string/uploaded_on"
        android:layout_marginTop="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/file_name" />


    <TextView
        android:id="@+id/file_date"
        style="@style/normalFontBaseColor"
        android:text="@string/file_date"
        android:layout_marginTop="5dp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_uploaded" />

    <Button
        android:id="@+id/bt_submit"
        style="@style/ButtonFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_not_now"
        app:layout_constraintBaseline_toBaselineOf="@+id/bt_not_now"/>


    <Button
        android:id="@+id/bt_not_now"
        style="@style/ButtonFont_negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_now"

        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toStartOf="@+id/bt_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/file_date"/>


</androidx.constraintlayout.widget.ConstraintLayout>
