<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_color"

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_button"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo" />

    <TextView
        android:id="@+id/skip"
        style="@style/normalFontWhite"
        android:text="@string/Skip"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="@+id/logo"/>

    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"

        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/email"
        style="@style/editTextEmail"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/password"
        style="@style/editTextPassword"
        android:layout_marginTop="10dp"

        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/login"
        style="@style/ButtonFont"
        android:layout_marginTop="20dp"
        android:layout_width="@dimen/loginEditTextWidth"
        android:text="@string/login"

        android:background="@drawable/button_selector"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/tv_forgot_password"
        style="@style/normalFontWhite"
        android:text="@string/forgot_password"
        android:layout_marginTop="15dp"

        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/layout_login_with"
        android:layout_width="@dimen/loginWithLayout_width"
        android:layout_height="@dimen/loginWithLayout_height"
        android:orientation="vertical"
        android:layout_marginTop="15dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"
        android:background="@drawable/wrapper"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_login_with"
            style="@style/normalFontWhite"
            android:text="@string/login_with"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/sign_in_facebook"
                android:contentDescription="@string/facebook_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/button_facebook"
                android:layout_weight="1" />

            <TextView
                android:text="@string/or"
                style="@style/normalFontWhite" />

            <ImageView
                android:id="@+id/sign_in_google"
                android:contentDescription="@string/google_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/button_google"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/create_account"
        style="@style/normalFontWhite"
        android:text="@string/create_account"
        android:layout_marginTop="10dp"

        app:layout_constraintTop_toBottomOf="@+id/layout_login_with"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
