<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.profile.settings"
    android:id="@+id/constraint_layout">

    <include android:id="@+id/toolbar" layout="@layout/toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wrapper"
        android:background="@drawable/wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"

        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            style="@style/bigFontWhite"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/receive_notif_jobs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notificationJob"
            style="@style/normalFontWhite"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_notifications"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MySwitch"

            android:checked="true"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/receive_notif_jobs"/>


        <TextView
            android:id="@+id/receive_notif_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notificationAbout"
            style="@style/normalFontWhite"

            android:layout_marginTop="10dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/receive_notif_jobs"/>

        <ToggleButton
            android:id="@+id/rb_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            style="@style/ToggleButton"

            android:textOn="@string/all"
            android:textOff="@string/all"
            android:checked="true"

            android:layout_marginTop="5dp"

            app:layout_constraintTop_toBottomOf="@+id/receive_notif_tv"
            app:layout_constraintStart_toStartOf="parent" />

        <ToggleButton
            android:id="@+id/rb_berita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            style="@style/ToggleButton"

            android:textOn="@string/berita"
            android:textOff="@string/berita"
            android:checked="true"

            android:layout_marginStart="10dp"

            app:layout_constraintBaseline_toBaselineOf="@+id/rb_all"
            app:layout_constraintStart_toEndOf="@+id/rb_all" />

        <ToggleButton
            android:id="@+id/rb_job_seeker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            style="@style/ToggleButton"

            android:textOn="@string/job_seeker"
            android:textOff="@string/job_seeker"
            android:checked="true"

            android:layout_marginStart="10dp"

            app:layout_constraintBaseline_toBaselineOf="@+id/rb_all"
            app:layout_constraintStart_toEndOf="@+id/rb_berita" />

        <ToggleButton
            android:id="@+id/rb_job_tips_karir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            style="@style/ToggleButton"

            android:textOn="@string/tips_karir"
            android:textOff="@string/tips_karir"
            android:checked="true"

            android:layout_marginStart="10dp"

            app:layout_constraintBaseline_toBaselineOf="@+id/rb_all"
            app:layout_constraintStart_toEndOf="@+id/rb_job_seeker" />

        <ToggleButton
            android:id="@+id/rb_panggilan_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            style="@style/ToggleButton"

            android:textOn="@string/panggilan_test"
            android:textOff="@string/panggilan_test"
            android:checked="true"

            android:layout_marginTop="10dp"

            app:layout_constraintTop_toBottomOf="@id/rb_all"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/tv_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            style="@style/bigFontWhite"
            android:layout_marginTop="10dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rb_panggilan_test"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_language">

            <RadioButton
                android:id="@+id/bahasa_indonesia"
                style="@style/normalFontWhite"
                android:text="@string/indonesia"
                android:drawableStart="@drawable/indonesia"
                android:drawablePadding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <RadioButton
                android:id="@+id/english"
                style="@style/normalFontWhite"
                android:text="@string/english"
                android:drawableStart="@drawable/uk"
                android:drawablePadding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>

        </RadioGroup>


        <TextView
            android:id="@+id/tv_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cache"
            style="@style/bigFontWhite"
            android:layout_marginTop="10dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup"/>

        <TextView
            android:id="@+id/tv_cache_size_var"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/normalFontWhite"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"

            app:layout_constraintStart_toEndOf="@id/tv_cache_size"
            app:layout_constraintTop_toBottomOf="@id/tv_cache"/>

        <TextView
            android:id="@+id/tv_cache_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cache_size"
            style="@style/normalFontWhite"
            android:layout_marginTop="10dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cache"/>

        <Button
            android:id="@+id/bt_clear_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/clear_cache"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cache_size"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>