<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <Button
        android:id="@+id/bt_x"
        style="@style/ButtonX"

        app:layout_constraintBottom_toTopOf="@+id/forgot_tv"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/forgot_tv"
        style="@style/normalFontBaseColor"
        android:text="@string/input_email"
        android:textStyle="bold"
        android:layout_marginTop="10dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_x" />

    <EditText
        android:id="@+id/et_email"
        style="@style/editTextEmail"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_tv" />



    <Button
        android:id="@+id/bt_reset"
        style="@style/ButtonFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_cancel"
        app:layout_constraintBaseline_toBaselineOf="@+id/bt_cancel"/>


    <Button
        android:id="@+id/bt_cancel"
        style="@style/ButtonFont_negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"

        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toStartOf="@+id/bt_reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"/>


</androidx.constraintlayout.widget.ConstraintLayout>
